fix: missing space in stacked columns in /about mobile

--- a/app/css/custom-styles.css
+++ b/app/css/custom-styles.css
@@ -1504,7 +1504,6 @@ img.flag {
 .founder .column-to-row {
     align-items: flex-start;
     justify-content: center;
-    gap: 0px;
 }
 
 .founder-social {
